--- a/Новая папка (3)/history.html
+++ b/Новая папка (3)/history.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #f4e1d2, #cbb6a8);
+            background: linear-gradient(135deg, #f4e1d2, #2c3e50);
             color: #333;
             display: flex;
             flex-direction: column;
@@ -27,7 +27,7 @@
         }
 
         h1 {
-            color: #8b5e34;
+            color: #2c3e50;
             text-align: center;
             margin-bottom: 20px;
         }
@@ -41,7 +41,7 @@
             display: block;
             margin: 20px auto;
             text-align: center;
-            background: #8b5e34;
+            background: #2c3e50;
             color: #fff;
             padding: 10px 20px;
             text-decoration: none;
@@ -50,12 +50,13 @@
             transition: background 0.3s;
         }
 
-        .back-button:hover {
-            background: #a66a42;
-        }
+            .back-button:hover {
+                background: #2c3e50;
+            }
     </style>
 </head>
 <body>
+    </div>
     <div class="content-container">
         <h1>История французской кухни</h1>
         <p>История французской кухни, согласно общепринятому мнению, началась в 16 веке при короле Франциске Первом. Именно в те времена появилось течение, названное «буржуазной кухней», в которое вошли и изысканные блюда аристократии, и сытные простые народные рецепты.</p>
